Horizontal scrolling fix

--- a/static/css/buyerdash.css
+++ b/static/css/buyerdash.css
@@ -34,13 +34,30 @@ body {
     margin-top: 1rem;
 }
 
-.horizontal {
-    display: block;
-    width: 80%;
-    margin: 0 auto;
-    overflow: hidden;
+#box::-webkit-scrollbar {
+    width: 0.3em;
 }
 
-.horizontal .products {
-    width: 6000px;
+#box::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+#box::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+}
+#box {
+    overflow-y: visible;
+    overflow-x: auto;
+    vertical-align: text-top;
+    /* margin: 0; */
+    padding: 0;
+    width: 100%;
+    clear: both;
+    display: flex;
+    flex-wrap:nowrap;
+    border-spacing: 5px;
+}
+#box .col {
+    flex: 0 0 auto;
 }
